syntax = "proto3";

package proto;

option go_package = "can-db-writer/internal/proto/can";

import "google/protobuf/timestamp.proto";

service canService {
  // Get CANopen messages classified by message type
  rpc GetCANopenMessages(GetCANopenMessagesRequest) returns (GetCANopenMessagesResponse);
}

// Common filter parameters
message QueryFilter {
  optional google.protobuf.Timestamp start_time = 1;
  optional google.protobuf.Timestamp end_time = 2;
  optional uint32 can_id = 3;
  string interface = 4;
  int32 limit = 5;
  int32 offset = 6;
}

// GetCANopenMessages request/response
message GetCANopenMessagesRequest {
  QueryFilter filter = 1;
  string message_type = 2;  // nmt, sync, emcy, pdo, sdo, heartbeat
  optional uint32 node_id = 3;
  map<string, string> pdo_mappings = 4;  // key: tpdo1/rpdo1, value: field mapping string
}

message CANopenMessage {
  google.protobuf.Timestamp timestamp = 1;
  string interface = 2;
  uint32 can_id = 3;
  string can_id_hex = 4;
  bytes data = 5;
  string message_type = 6;
  uint32 node_id = 7;
  map<string, string> parsed_data = 8;  // parsed PDO data if available
}

message GetCANopenMessagesResponse {
  repeated CANopenMessage messages = 1;
}
